# Mrxataxhox

./: .gitignore  .secrets.baseline  pyproject.toml
Database/: patachon.sql  test.db
Programme/: main.py  notion.http
Test/: get_data.py  get_page_info.py  post_data.py  test.ipynb
Test/Tests/: test_get_data.py
