[tool.poetry]
name = "mrpatachon"
version = "0.1.0"
description = "Gestion des Stocks du restaurant"
authors = ["IshemZ <zerzourishem@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
requests = "^2.32.3"
chardet = "^5.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.3"
python-dotenv = "^1.0.1"
detect-secrets = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
